--- a/base/pom.xml
+++ b/base/pom.xml
@@ -2,10 +2,10 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
      <artifactId>zauber-commons-parent</artifactId>
-     <groupId>ar.com.zauber.commons</groupId>
+     <groupId>com.zaubersoftware.commons</groupId>
      <version>3.48-SNAPSHOT</version>
   </parent>
-  <groupId>ar.com.zauber.commons</groupId>
+  <groupId>com.zaubersoftware.commons</groupId>
   <artifactId>commons-base</artifactId>
   <packaging>jar</packaging>
   <name>Zauber::Commons::Base</name>
