--- a/web/version/pom.xml
+++ b/web/version/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>commons-web-parent</artifactId>
-    <groupId>ar.com.zauber.commons.web</groupId>
+    <groupId>com.zaubersoftware.commons.web</groupId>
     <version>3.48-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Web::Version</name>
