--- a/image/impl/pom.xml
+++ b/image/impl/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>parent</artifactId>
-    <groupId>ar.com.zauber.commons.image</groupId>
+    <groupId>com.zaubersoftware.commons.image</groupId>
     <version>3.48-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Image:Implementation</name>
@@ -10,7 +10,7 @@
   <packaging>jar</packaging>
   <dependencies>
     <dependency>
-        <groupId>ar.com.zauber.commons.image</groupId>
+        <groupId>com.zaubersoftware.commons.image</groupId>
         <artifactId>commons-image-api</artifactId> 
     </dependency>
     <dependency>
