--- a/message/api/pom.xml
+++ b/message/api/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>parent</artifactId>
-    <groupId>ar.com.zauber.commons.message</groupId>
+    <groupId>com.zaubersoftware.commons.message</groupId>
     <version>3.48-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -10,7 +10,7 @@
   
   <dependencies>
     <dependency>
-      <groupId>ar.com.zauber.commons</groupId>
+      <groupId>com.zaubersoftware.commons</groupId>
       <artifactId>commons-base</artifactId>
     </dependency>
   </dependencies>
