--- a/message/impl/pom.xml
+++ b/message/impl/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>parent</artifactId>
-    <groupId>ar.com.zauber.commons.message</groupId>
+    <groupId>com.zaubersoftware.commons.message</groupId>
     <version>3.48-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Message::Implementation</name>
@@ -11,7 +11,7 @@
   <dependencies>
     <!-- BEGIN: Zauber Commons -->
     <dependency>
-      <groupId>ar.com.zauber.commons.message</groupId>
+      <groupId>com.zaubersoftware.commons.message</groupId>
       <artifactId>commons-message-api</artifactId>
     </dependency>
     <!-- END: Zauber Commons -->
