--- a/persistence/api/pom.xml
+++ b/persistence/api/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>commons-persistence-parent</artifactId>
-    <groupId>ar.com.zauber.commons.persistence</groupId>
+    <groupId>com.zaubersoftware.commons.persistence</groupId>
     <version>3.48-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Persistence::API</name>
