--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?><project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
-    <groupId>ar.com.zauber.commons</groupId>
+    <groupId>com.zaubersoftware.commons</groupId>
     <version>3.48-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Spring</name>
@@ -10,32 +10,32 @@
   <dependencies>
     <!-- BEGIN: Zauber Commons -->
     <dependency>
-      <groupId>ar.com.zauber.commons</groupId>
+      <groupId>com.zaubersoftware.commons</groupId>
       <artifactId>commons-base</artifactId>
     </dependency>
     <dependency>
-      <groupId>ar.com.zauber.commons.web</groupId>
+      <groupId>com.zaubersoftware.commons.web</groupId>
       <artifactId>commons-web-version</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>ar.com.zauber.commons.web</groupId>
+      <groupId>com.zaubersoftware.commons.web</groupId>
       <artifactId>commons-web-proxy</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>ar.com.zauber.commons.web</groupId>
+      <groupId>com.zaubersoftware.commons.web</groupId>
       <artifactId>commons-web-utils</artifactId>
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>ar.com.zauber.commons.persistence</groupId>
+      <groupId>com.zaubersoftware.commons.persistence</groupId>
       <artifactId>commons-persistence-utils</artifactId>
       <optional>true</optional>
     </dependency>
 
     <dependency>
-      <groupId>ar.com.zauber.commons.repository.impl</groupId>
+      <groupId>com.zaubersoftware.commons.repository.impl</groupId>
       <artifactId>commons-repository-impl-entities</artifactId>
       <optional>true</optional>
     </dependency>
