--- a/web/proxy/pom.xml
+++ b/web/proxy/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <artifactId>commons-web-parent</artifactId>
-    <groupId>ar.com.zauber.commons.web</groupId>
+    <groupId>com.zaubersoftware.commons.web</groupId>
     <version>3.48-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Web::Proxy</name>
@@ -12,7 +12,7 @@
     <!-- BEGIN: Zauber Commons -->
     <dependency>
       <artifactId>commons-base</artifactId>
-      <groupId>ar.com.zauber.commons</groupId>
+      <groupId>com.zaubersoftware.commons</groupId>
     </dependency>
     <!-- END: Zauber Commons -->
     <!-- BEGIN: Apache Commons -->
