Upgrade a JTidy del 2009 (usabamos una version del 2000)
Se elimina la implementacion JTidyDocumentProvider (carece de sentido),
por lo que TidyScrapper cambia su constructor (recibe directamente un Tidy).

--- a/web/transformation/pom.xml
+++ b/web/transformation/pom.xml
@@ -17,12 +17,11 @@
         <artifactId>commons-io</artifactId>
         <groupId>commons-io</groupId>
      </dependency>
-    
-     <dependency>
-        <artifactId>jtidy</artifactId>
-        <groupId>jtidy</groupId>
-     </dependency>
-
+	<dependency>
+	    <groupId>net.sf.jtidy</groupId>
+	    <artifactId>jtidy</artifactId>
+	    <version>r938</version>
+	</dependency>
     <dependency>
        <artifactId>spring-beans</artifactId>
        <groupId>org.springframework</groupId>
