Depend on a version of trang of maven central.

--- a/spring-taglib/pom.xml
+++ b/spring-taglib/pom.xml
@@ -38,9 +38,9 @@
     </dependency>
     <!-- END: Logging -->
      <dependency>
-        <groupId>trang</groupId>
+        <groupId>com.thaiopensource</groupId>
         <artifactId>trang</artifactId>
-        <version>20081028</version>
+        <version>20091111</version>
        <scope>provided</scope>
      </dependency>
   </dependencies>
