--- a/web/utils/pom.xml
+++ b/web/utils/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>commons-web-parent</artifactId>
     <groupId>com.zaubersoftware.commons.web</groupId>
-    <version>3.49</version>
+    <version>3.50-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Web::Utils</name>
   <artifactId>commons-web-utils</artifactId>
