--- a/web/proxy/pom.xml
+++ b/web/proxy/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>commons-web-parent</artifactId>
     <groupId>com.zaubersoftware.commons.web</groupId>
-    <version>3.50-SNAPSHOT</version>
+    <version>3.50</version>
   </parent>
   <name>Zauber::Commons::Web::Proxy</name>
   <artifactId>commons-web-proxy</artifactId>
