[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>Zauber::Commons</name>
   <groupId>com.zaubersoftware.commons</groupId>
   <artifactId>zauber-commons-parent</artifactId>
-  <version>3.50</version>
+  <version>3.51-SNAPSHOT</version>
   <packaging>pom</packaging>
 
    <description>
