--- a/auth/impl/pom.xml
+++ b/auth/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>com.zaubersoftware.commons.auth</groupId>
-    <version>3.50</version>
+    <version>3.51-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Auth::Implementation</name>
   <artifactId>commons-auth-impl</artifactId>
