--- a/persistence/pom.xml
+++ b/persistence/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>com.zaubersoftware.commons</groupId>
-    <version>3.50</version>
+    <version>3.51-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Persistence</name>
   <artifactId>commons-persistence-parent</artifactId>
