--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>com.zaubersoftware.commons</groupId>
-    <version>3.51-SNAPSHOT</version>
+    <version>3.52</version>
   </parent>
   <name>Zauber::Commons::Spring</name>
   <modelVersion>4.0.0</modelVersion>
