--- a/web/uri/pom.xml
+++ b/web/uri/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>commons-web-parent</artifactId>
     <groupId>com.zaubersoftware.commons.web</groupId>
-    <version>3.52</version>
+    <version>3.53-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Web::Uri</name>
   <artifactId>commons-web-uri</artifactId>
