--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <name>Zauber::Commons</name>
   <groupId>com.zaubersoftware.commons</groupId>
   <artifactId>zauber-commons-parent</artifactId>
-  <version>3.53</version>
+  <version>3.54-SNAPSHOT</version>
   <packaging>pom</packaging>
 
    <description>
@@ -21,7 +21,7 @@
     <connection>scm:git:git@github.com:zauberlabs/commons.git</connection>
     <url>scm:git:git@github.com:zauberlabs/commons.git</url>
     <developerConnection>scm:git:git@github.com:zauberlabs/commons.git</developerConnection>
-    <tag>3.53</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <licenses>
