--- a/base/pom.xml
+++ b/base/pom.xml
@@ -3,7 +3,7 @@
   <parent>
      <artifactId>zauber-commons-parent</artifactId>
      <groupId>com.zaubersoftware.commons</groupId>
-     <version>3.54-SNAPSHOT</version>
+     <version>3.54</version>
   </parent>
   <groupId>com.zaubersoftware.commons</groupId>
   <artifactId>commons-base</artifactId>
