--- a/spring-taglib/pom.xml
+++ b/spring-taglib/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>zauber-commons-parent</artifactId>
     <groupId>com.zaubersoftware.commons</groupId>
-    <version>3.54-SNAPSHOT</version>
+    <version>3.54</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.zaubersoftware.commons</groupId>
