--- a/image/impl/pom.xml
+++ b/image/impl/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>com.zaubersoftware.commons.image</groupId>
-    <version>3.54</version>
+    <version>3.55-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Image:Implementation</name>
   <artifactId>commons-image-impl</artifactId>
