--- a/message/impl/pom.xml
+++ b/message/impl/pom.xml
@@ -2,7 +2,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>com.zaubersoftware.commons.message</groupId>
-    <version>3.55</version>
+    <version>3.56-SNAPSHOT</version>
   </parent>
   <name>Zauber::Commons::Message::Implementation</name>
   <modelVersion>4.0.0</modelVersion>
